src/objects/Income__c.object
<CustomObject>
    <fields>
        <fullName>Alimony_ChildSupport_Income__c</fullName>
        <label>Alimony/Child Support Income</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Automobile_Expense_Income__c</fullName>
        <label>Automobile/Expense Account Income</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_Employment_Income__c</fullName>
        <description>Must be greater than 0</description>
        <label>Base Employment Income</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Boarder_Income__c</fullName>
        <label>Boarder Income</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bonus_Income__c</fullName>
        <description>Must be greater than 0</description>
        <label>Bonus Income</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capital_Gains__c</fullName>
        <label>Capital Gains</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commissions_Income__c</fullName>
        <description>Must be greater than 0</description>
        <label>Commissions Income</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Disability_Income__c</fullName>
        <label>Disability Income</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dividents_Interest_Income__c</fullName>
        <description>Must be greater than 0</description>
        <label>Dividend/Interest Income</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Foster_Care_Income__c</fullName>
        <label>Foster Care</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Military_Base_Pay__c</fullName>
        <label>Military Base Pay</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Military_Clothes_Allowance__c</fullName>
        <label>Military Clothes Allowance</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Military_Combat_Pay__c</fullName>
        <label>Military Combat Pay</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Military_Flight_Pay__c</fullName>
        <label>Military Flight Pay</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Military_Hazard_Pay__c</fullName>
        <label>Military Hazard Pay</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Military_Overseas_Pay__c</fullName>
        <label>Military Overseas Pay</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Military_Prop_Pay__c</fullName>
        <label>Military Prop Pay</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Military_Quarters_Allowance__c</fullName>
        <label>Military Quarters Allowance</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Military_Rations_Allowance__c</fullName>
        <label>Military Rations Allowance</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Military_Variable_Housing_allowance__c</fullName>
        <label>Military Variable Housing allowance</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mortgage_Credit_Certificate__c</fullName>
        <label>Mortgage Credit Certificate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mortgage_Differential_Certificate__c</fullName>
        <label>Mortgage Differential</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Rental_Income__c</fullName>
        <description>Must be greater than Zero</description>
        <label>Net Rental Income</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notes_Receivable_Installment__c</fullName>
        <label>Notes Receivable/Installment</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Income__c</fullName>
        <label>Other types of Income</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OverTime_Income__c</fullName>
        <description>Must be greater than 0</description>
        <label>Pension/Retirement Income</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pension_Retirement_Income__c</fullName>
        <label>Pension/Retirement Income</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Real_Estate_Mortgage_Differential__c</fullName>
        <label>Real Estate/Mortgage Differential</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RelatedClient__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>RelatedClient</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipName>Incomes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Loan__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Related Loan</label>
        <referenceTo>Loan_New__c</referenceTo>
        <relationshipName>Incomes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Social_Security_Disability_Income__c</fullName>
        <label>Social Security Income</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SubjectProperty_Income__c</fullName>
        <label>Subject Property Net Cash Flow</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Temporary_Leave_income__c</fullName>
        <label>Temporary Leave income</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trailing_Co_borrower_Income__c</fullName>
        <label>Trailing Co-borrower Income</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trust_Income__c</fullName>
        <description>Must be greater than 0</description>
        <label>Trust Income</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unemployment_Welfare_Income__c</fullName>
        <label>Unemployment/Welfare Income</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VA_Benefits_non_education__c</fullName>
        <label>VA Benefits (non-education)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To know whether the record is active or not</description>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>Income Old</label>
    <nameField>
        <displayFormat>IN-{00000}</displayFormat>
        <label>Income ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incomes Old</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All_Income_Information</fullName>
        <columns>NAME</columns>
        <columns>RelatedClient__c</columns>
        <columns>Related_Loan__c</columns>
        <columns>isActive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Income Information</label>
    </listViews>
</CustomObject>